--- a/lab4-bd-server/lab4-bd-server.csproj
+++ b/lab4-bd-server/lab4-bd-server.csproj
@@ -11,6 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <!-- Добавлена библиотека Consul -->
+    <PackageReference Include="Consul" Version="1.7.14.9" />
     <PackageReference Include="Grpc.AspNetCore" Version="2.64.0" />
     <PackageReference Include="Npgsql" Version="10.0.1" />
   </ItemGroup>
