--- a/lab4-bd-server/appsettings.json
+++ b/lab4-bd-server/appsettings.json
@@ -10,5 +10,7 @@
     "EndpointDefaults": {
       "Protocols": "Http2"
     }
-  }
+  },
+  "ConsulAddress": "http://localhost:8500",
+  "port": 5001
 }
