--- a/lab4-bd-server/appsettings.json
+++ b/lab4-bd-server/appsettings.json
@@ -11,6 +11,6 @@
       "Protocols": "Http2"
     }
   },
-  "ConsulAddress": "http://localhost:8500",
+  "ConsulAddress": "http://192.168.0.100:8500",
   "port": 5132
 }
